style: fix width for label on mobile size

--- a/js-users/user-list/src/Components/Forms/Form.module.css
+++ b/js-users/user-list/src/Components/Forms/Form.module.css
@@ -51,6 +51,7 @@
   height: 30px;
 }
 .spanError {
+  padding-left: .5rem;
   font-size: 0.8rem;
   font-weight: 550;
   color: var(--lock-text);
