--- a/js-users/user-list/src/Components/Users/UserTable.module.css
+++ b/js-users/user-list/src/Components/Users/UserTable.module.css
@@ -87,7 +87,7 @@
   }
   tr td:not(:last-child, :nth-last-child(2)) {
     display: flex;
-    flex-direction: row-reverse;
+    gap:.5rem;
     margin-left: auto;
   }
   td {
@@ -101,12 +101,7 @@
     max-width: 100%;
   }
   td:before {
-    /* Now like a table header */
-    position: absolute;
-    /* Top/left values mimic padding */
-    top: 6px;
-    left: 6px;
-    width: 45%;
+    min-width: 80px;
     padding-right: 10px;
     white-space: nowrap;
   }
